2002-09-20 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* slabmatrixcache.h: Refactor to be useful in Section.
	* slabmatrixcache.cpp: Ditto.
	* generalslab.h: Ditto.
	* generalslab.cpp: Ditto.

2002-07-15 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.h: Major change in the way PML is defined.
	* generalslab.cpp: Ditto.

2002-06-03 Lieven Vanholme <Lieven.Vanholme@rug.ac.be>

	* generalslab.h: Support for expanding arbitrary functions in
                         eigenmodes.
	* generalslab.cpp: Ditto.

2002-05-09 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.h: Add get_imag_start_thickness.
	* generalslab.cpp: Fix SlabFlux for PML case.

2002-03-18 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Improve portability.
	* generalslab.h: Ditto.
	* slabmatrixcache.cpp: Ditto.

2002-03-14 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Change branch cut.

2002-01-21 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.h: Update support for parameter getting/setting.

2002-01-21 Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.h: Add support for slab matrix cache.
	* generalslab.cpp: Ditto.
	* slabmatrixcache.h: New file.
	* slabmatrixcache.cpp: New file.
	* makefile: Update.

2001-11-27  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Fix signs and normalisation.

2001-11-21  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Account for non-orthogonal modes.

2001-11-09  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Fix normalisation.

2001-11-08  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Replace wrong kz by kz0.

2001-10-29  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

	* generalslab.cpp: Virtualise kz.
	
2001-10-25  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * generalslab.cpp: Add overlap integrals for off-axis incidence.
	