@@ -1,3 +1,11 @@
+2002-10-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* slab.cpp: Rename left/right to lower/upper.
+	* slabdisp.cpp: Ditto.
+	* slabdisp.h: Ditto.
+	* slabmode.cpp: Ditto.
+	* slabmode.h: Ditto.
+
 2002-07-15 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
         * slab.cpp: Change threshold for complex modes.
