@@ -1,3 +1,8 @@
+2002-10-30 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* generalslab.cpp: Rename left/right to lower/upper.
+	* generalslab.h: Ditto.
+
 2002-09-20 Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* slabmatrixcache.h: Refactor to be useful in Section.
